--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ header{
     display: flex;
     background-color: black;
     color: white;
+    justify-content: space-between;
+    align-items: center;
 }
     
 .bacalhao{
