--- a/style.css
+++ b/style.css
@@ -30,3 +30,16 @@ header{
     background-color: #2C2C2C;
     border: #3C3C3C;
 }
+
+.joa{
+    text-align: center;
+    margin: auto;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+
+}
+
+.gar{
+    text-align: end;
+}
