--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@ header{
 .baska{
     text-align: center;
     background-color: #2C2C2C;
-    border: #3C3C3C;
+    color: white;
+    border: white;
 }
 
 .joa{
