--- a/style.css
+++ b/style.css
@@ -8,7 +8,10 @@ header{
     justify-content: space-between;
     align-items: center;
 }
-    
+
+html{
+    background-color: rgb(127, 187, 36);
+}
 .bacalhao{
     width: 30%;
     text-align: center;
