--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ header{
 }
 
 html{
-    background-color: rgb(255, 186, 186);
+    background-color: #00614c;
 }
 .bacalhao{
     width: 30%;
@@ -32,7 +32,7 @@ html{
     text-align: center;
     background-color: #2C2C2C;
     color: white;
-    border-top-left-radius: white solid;
+    border-top-left-radius: #607D8B solid;
 }
 
 .joa{
