--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ html{
     text-align: center;
     background-color: #2C2C2C;
     color: white;
-    border-top-left-radius: #607D8B solid;
+    border: #607D8B solid;
 }
 
 .joa{
