--- a/styles/style.css
+++ b/styles/style.css
@@ -47,3 +47,12 @@ html{
 .gar{
     text-align: end;
 }
+
+.tempero{
+    background-color: blue;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
