--- a/cinza/cinza.css
+++ b/cinza/cinza.css
@@ -49,9 +49,9 @@ html{
 }
 
 .tempero{
-    background-color: blue;
+    background-color: rgb(92, 92, 92);
     color: white;
-    padding: 10px 20px;
+    padding: 5px 10px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
