--- a/style.css
+++ b/style.css
@@ -58,6 +58,10 @@ html{
 }
 
 .stark{
-    margin: 0%;
-    padding: 0%;
+    margin: 10%;
+    padding: 1%;
+    background: #187d67;
+    color: #ececec;
+    border: solid mediumaquamarine;
+    border-style: groove;
 }
