--- a/mestre/mestre.css
+++ b/mestre/mestre.css
@@ -56,3 +56,20 @@ html{
     border-radius: 5px;
     cursor: pointer;
 }
+
+.ombro{
+    background-color: indianred;
+    margin-top: 5%;
+}
+
+.omega{
+
+}
+
+.beta{
+
+}
+
+.bis{
+    
+}
